# heroes-of-the-sun

./: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  package.json
app/Assets/: UniversalRenderPipelineGlobalSettings.asset
app/Assets/Plugins/WebGL/: webfile.jslib
app/Assets/Prefabs/Characters/: Hero.prefab
app/Assets/Prefabs/UI/: HUD_Treasury.prefab  ResourceSnapshot.prefab  TokenInfo.prefab
app/Assets/Prefabs/World/: Deity.prefab  RootSmartObject.prefab  TokenLauncher.prefab
app/Assets/Resources/: PerformanceTestRunInfo.json
app/Assets/Scenes/: Loading.unity  Settlement.unity  World.unity
app/Assets/Scripts/Bolt/: LootDistribution.cs  SmartObjectDeity.cs  SmartObjectLocation.cs  SmartObjectTokenLauncher.cs
app/Assets/Scripts/Connectors/: BaseComponentConnector.cs  HeroConnector.cs  LocationAllocatorConnector.cs  LootDistributionConnector.cs  Pda.cs  PlayerConnector.cs  PlayerSettlementConnector.cs  SettlementConnector.cs  SmartObjectDeityConnector.cs  SmartObjectLocationConnector.cs  SmartObjectTokenLauncherConnector.cs  TokenConnector.cs
app/Assets/Scripts/Model/: LootModel.cs  SettlementModel.cs  TokenModel.cs
app/Assets/Scripts/Notifications/: HideInteractionWithSmartObject.cs  RedrawSmartObjects.cs
app/Assets/Scripts/Utils/: Bootstrap.cs  Cheats.SROptions.cs  MetadataAccountV3.cs
app/Assets/Scripts/View/Exploration/: PointAndClickMovement.cs  RenderHero.cs  RenderHeroes.cs  RenderSmartObject.cs  RenderSmartObjects.cs
app/Assets/Scripts/View/Exploration/SmartObjectTypes/: ISmartObject.cs  RenderSmartObjectDeity.cs  RenderSmartObjectTokenLauncher.cs
app/Assets/Scripts/View/FTUE/: HandleFtuePrompt.cs
app/Assets/Scripts/View/UI/: CtaTagMarker.cs  DisplayBackpack.cs  DisplayQuests.cs  DisplayTreasury.cs  DisplayWorkerAssignment.cs  ManageBackpack.cs  ManageExchange.cs  ManageTokenCreation.cs  NumericStepper.cs  PopupManager.cs  WorkerAssignmentEntry.cs
app/Assets/Scripts/View/UI/Building/: BuildMenuContainer.cs  BuildingInfo.cs  BuildingProgress.cs  BuildingUIPanel.cs  DisplayBuildMenu.cs  PlacementPanel.cs
app/Assets/Scripts/View/UI/Dialogue/: DialogueTrigger.cs
app/Assets/Scripts/View/UI/World/: TokenInfo.cs
crates/types/: Cargo.toml
programs-ecs/components/hero/: Cargo.toml
programs-ecs/components/location_allocator/: Cargo.toml
programs-ecs/components/loot-distribution/: Cargo.toml
programs-ecs/components/player/: Cargo.toml
programs-ecs/components/settlement/: Cargo.toml
programs-ecs/components/settlement/src/: lib.rs
programs-ecs/components/smart-object-deity/: Cargo.toml
programs-ecs/components/smart-object-location/: Cargo.toml
programs-ecs/components/smart-object-token-launcher/: Cargo.toml
programs-ecs/components/smart-object-token-launcher/src/: lib.rs
programs-ecs/systems/assign-hero/: Cargo.toml
programs-ecs/systems/assign-settlement/: Cargo.toml
programs-ecs/systems/assign-worker/: Cargo.toml
programs-ecs/systems/bump_location_allocator/: Cargo.toml
programs-ecs/systems/change-backpack/: Cargo.toml
programs-ecs/systems/claim-loot/: Cargo.toml
programs-ecs/systems/claim-loot/src/: lib.rs
programs-ecs/systems/claim-quest/: Cargo.toml
programs-ecs/systems/claim-quest/src/: lib.rs
programs-ecs/systems/claim-time/: Cargo.toml
programs-ecs/systems/exchange/: Cargo.toml
programs-ecs/systems/exchange/src/: lib.rs
programs-ecs/systems/move-hero/: Cargo.toml
programs-ecs/systems/repair/: Cargo.toml
programs-ecs/systems/research/: Cargo.toml
programs-ecs/systems/reset/: Cargo.toml
programs-ecs/systems/sacrifice/: Cargo.toml
programs-ecs/systems/smart-object-deity-interact/: Cargo.toml
programs-ecs/systems/smart-object-init/: Cargo.toml
programs-ecs/systems/smart-object-init/src/: errors.rs  lib.rs
programs-ecs/systems/smart-object-token-launcher-init/: Cargo.toml
programs-ecs/systems/smart-object-token-launcher-init/src/: errors.rs  lib.rs
programs-ecs/systems/smart-object-token-launcher-interact/: Cargo.toml
programs-ecs/systems/smart-object-token-launcher-interact/src/: errors.rs  lib.rs
programs-ecs/systems/upgrade/: Cargo.toml
programs-ecs/systems/wait/: Cargo.toml
programs-ecs/systems/wait/src/: lib.rs
programs/deity-bot/: Cargo.toml
programs/deity-bot/src/instructions/: interact_agent.rs
programs/token-minter/: Cargo.toml
programs/token-minter/src/: lib.rs
programs/token-minter/src/instructions/: mint.rs  mod.rs  transfer.rs
tests/: exploration.test.ts  smartobjects.test.ts  tokenisation.test.ts
tests/wrappers/: smart_object.wrapper.ts  token.wrapper.ts
