[workspace]
members = [
    "programs-ecs/components/*",
    "programs-ecs/systems/*",
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
bolt-lang = "=0.2.2"
anchor-lang = { version = "=0.30.1", features = [ "init-if-needed" ] }
anchor-spl = { version = "=0.30.1", features = ["metadata"] }
serde = { version = "1.0", features = ["derive"] }
