[workspace]
members = [
    "programs-ecs/components/*",
    "programs-ecs/systems/*",
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-spl = { version = "0.31.1", features = ["metadata"] }
anchor-lang = { version = "0.31.1", features = [ "init-if-needed" ] }
bolt-lang = { version = "0.2.4" }
session-keys = "^2"
serde_json = "^1"
solana-gpt-oracle = "^0"
serde = { version = "1.0", features = ["derive"] }
