[package]
name = "deity-bot"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deity_bot"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang.workspace = true
serde_json.workspace = true
solana-gpt-oracle = { workspace = true, features = ["cpi"] }
anchor-spl.workspace = true
token-minter = { version = "0.1.0", path = "../token-minter", features = ["cpi"] }
