[package]
name = "claim-loot"
version = "0.1.8"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "claim_loot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
bolt-lang.workspace = true
anchor-lang.workspace = true
anchor-spl.workspace = true

player = { version = "0.1.8", path = "../../components/player", features = ["cpi"] }
hero = { version = "0.1.8", path = "../../components/hero", features = ["cpi"] }
loot-distribution = { version = "0.1.8", path = "../../components/loot-distribution", features = ["cpi"] }
token-minter = { version = "0.1.0", path = "../../../programs/token-minter", features = ["cpi"] }
