[package]
name = "research"
version = "0.1.10"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "research"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang.workspace = true
anchor-lang.workspace = true
serde.workspace = true
settlement = { version = "0.1.10", path = "../../components/settlement", features = ["cpi"] }
