[package]
name = "smart-object-token-launcher-interact"
version = "0.1.8"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_object_token_launcher_interact"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []

[dependencies]
bolt-lang = "0.2.2"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
smart-object-token-launcher = { version = "0.1.8", path = "../../components/smart-object-token-launcher", features = ["cpi"] }
hero = { version = "0.1.10", path = "../../components/hero", features = ["cpi"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
