[package]
name = "wait"
version = "0.1.10"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wait"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
bolt-lang.workspace = true
anchor-lang.workspace = true
anchor-spl.workspace = true
serde = { version = "1.0", features = ["derive"] }
settlement = { version = "0.1.10", path = "../../components/settlement", features = ["cpi"] }
